--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "http-server -p 3000",
     "serve:hello-vue": "http-server ./hello-vue -p 3000",
-    "serve:assignment-1": "http-server ./basics-assignment-1 -p 3000"
+    "serve:assignment-1": "http-server ./basics-assignment-1 -p 3000",
+    "serve:assignment-2": "http-server ./basics-assignment-2 -p 3000"
   },
   "author": "",
   "license": "ISC",
