learn two way binding using v-model

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "http-server -p 3000",
     "serve:hello-vue": "http-server ./hello-vue -p 3000",
     "serve:assignment-1": "http-server ./basics-assignment-1 -p 3000",
-    "serve:assignment-2": "http-server ./basics-assignment-2 -p 3000"
+    "serve:assignment-2": "http-server ./basics-assignment-2 -p 3000",
+    "serve:two-way-binding": "http-server ./two-way-binding -p 3000"
   },
   "author": "",
   "license": "ISC",
