learn about v-if/v-else, v-show, v-for

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "serve:assignment-1": "http-server ./basics-assignment-1 -p 3000",
     "serve:assignment-2": "http-server ./basics-assignment-2 -p 3000",
     "serve:two-way-binding": "http-server ./two-way-binding -p 3000",
-    "serve:reactivity": "http-server ./reactivity -p 3000"
+    "serve:reactivity": "http-server ./reactivity -p 3000",
+    "serve:list-conditional-content": "http-server ./lists-conditional-content -p 3000"
   },
   "author": "",
   "license": "ISC",
