data-binding run script add to package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "http-server -p 3000",
+    "serve:data-binding": "http-server ./data-binding -p 3000",
     "serve:hello-vue": "http-server ./hello-vue -p 3000",
     "serve:assignment-1": "http-server ./basics-assignment-1 -p 3000",
     "serve:assignment-2": "http-server ./basics-assignment-2 -p 3000",
